# Holograms

./: .gitignore  CMakeLists.txt  Settings.xml  template.xml
src/: ImageCache.cpp  ImageCache.h  ImageSource.h  OctopusClient.cpp  OctopusClient.h  OfflineReader.cpp  OfflineReader.h  ReportWriter.cpp  ReportWriter.h  Settings.cpp  Settings.h  Socket.cpp  Socket.h  main.cpp  writeImages.cpp
